--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body, html {
+    width: 100vw;
     height: 100vh;
     margin: 0;
     padding: 0;
@@ -15,6 +16,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 2;
 }
 
 .origami {
@@ -23,13 +25,37 @@ body, html {
     animation-duration: 8s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
+    transition: transform 0.5s ease;
 }
 
 .origami:nth-child(1) {
     animation-name: float1;
+    left: 2%; /* panda */
+    top: 10%;
 }
 
 .origami:nth-child(2) {
     animation-name: float2;
-    left: 50%; 
+    left: 22.5%; /* cat */
+    top: 10%;
 }
+
+.origami:nth-child(3) {
+    animation-name: float3;
+    left: 45%; /* crane */
+    top: 20%;
+}
+
+.origami:nth-child(4) {
+    animation-name: float4;
+    right: 22.5%; /* fox */
+    top: 10%;
+}
+
+.origami:nth-child(5) {
+    animation-name: float5;
+    right: 2%; /* squirrel */
+    top: 10%;
+}
+
+
